[gd_scene load_steps=17 format=3 uid="uid://5wllx01h6pqs"]

[ext_resource type="Texture2D" uid="uid://drprns1suecoh" path="res://Assets/sprites/menu_mercado_mockup.png" id="1_frgl3"]
[ext_resource type="Script" uid="uid://v6fj0kmdayre" path="res://Scripts/hud e menus/SkinStoreButtons.gd" id="2_2bh30"]
[ext_resource type="Theme" uid="uid://13k87xtq212r" path="res://Cenas/hud e menus/tres/botao_menu_niveis.tres" id="3_2w1wo"]
[ext_resource type="Theme" uid="uid://p3mjdw5vhdb0" path="res://Cenas/hud e menus/StoreButton.tres" id="3_67pyf"]
[ext_resource type="Script" uid="uid://4kw0yu1um4vm" path="res://Scripts/hud e menus/SkinStoreLabels.gd" id="3_bphmr"]
[ext_resource type="Texture2D" uid="uid://ipygxa0b3qjo" path="res://Assets/Inventory/slot_inv.png" id="4_gj35x"]
[ext_resource type="Texture2D" uid="uid://dqvleg5sv87rb" path="res://Assets/spritesheets/skin1_breathing.png" id="5_f7ngf"]
[ext_resource type="Texture2D" uid="uid://cqew6syu3baf5" path="res://Assets/spritesheets/player_breathing.png" id="5_sbihw"]
[ext_resource type="Texture2D" uid="uid://da7fkkyav1k1r" path="res://Assets/spritesheets/gold_breathing.png" id="7_sbihw"]
[ext_resource type="LabelSettings" uid="uid://451o6h7f5dwi" path="res://Cenas/hud e menus/tres/hud_label_settings.tres" id="8_7yj5r"]
[ext_resource type="Texture2D" uid="uid://cpto0txrmllto" path="res://Assets/sprites/descricacao_item.png" id="8_a04mj"]
[ext_resource type="Texture2D" uid="uid://bxcm8oasgop6y" path="res://Assets/sprites/estrela.png" id="10_gj35x"]
[ext_resource type="Theme" uid="uid://cytrg3c2hrooa" path="res://rich_text_loja.tres" id="13_doxrh"]

[sub_resource type="Animation" id="Animation_ica3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ua8by"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.571429),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fsho"]
_data = {
&"RESET": SubResource("Animation_ica3m"),
&"idle": SubResource("Animation_ua8by")
}

[node name="SkinsStore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprites" type="Node" parent="."]

[node name="SkinStoreBackground" type="Sprite2D" parent="Sprites"]
position = Vector2(576, 324)
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_frgl3")

[node name="ColorRect" type="ColorRect" parent="Sprites"]
offset_left = 72.0
offset_top = 200.0
offset_right = 1089.0
offset_bottom = 595.0
color = Color(0.219608, 0.25098, 0.364706, 1)

[node name="Buttons" type="Node" parent="."]
script = ExtResource("2_2bh30")

[node name="Skin1Button" type="Button" parent="Buttons"]
offset_left = 172.0
offset_top = 179.0
offset_right = 329.0
offset_bottom = 376.0
theme = ExtResource("3_67pyf")

[node name="TextureRect" type="TextureRect" parent="Buttons/Skin1Button"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 0
offset_left = -28.0
offset_right = 152.0
offset_bottom = 197.0
texture = ExtResource("4_gj35x")

[node name="skin1" type="Sprite2D" parent="Buttons/Skin1Button/TextureRect"]
position = Vector2(90, 94)
scale = Vector2(6.91667, 6.91667)
texture = ExtResource("5_sbihw")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Skin1Button/TextureRect/skin1"]
active = false
libraries = {
&"": SubResource("AnimationLibrary_7fsho")
}
autoplay = "idle"
speed_scale = 0.875

[node name="Skin2Button" type="Button" parent="Buttons"]
offset_left = 463.0
offset_top = 179.0
offset_right = 662.0
offset_bottom = 376.0
theme = ExtResource("3_67pyf")

[node name="TextureRect" type="TextureRect" parent="Buttons/Skin2Button"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 0
offset_left = 18.0
offset_right = 198.0
offset_bottom = 197.0
texture = ExtResource("4_gj35x")

[node name="skin2" type="Sprite2D" parent="Buttons/Skin2Button/TextureRect"]
position = Vector2(70, 96)
scale = Vector2(6.91667, 6.91667)
texture = ExtResource("5_f7ngf")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Skin2Button/TextureRect/skin2"]
active = false
libraries = {
&"": SubResource("AnimationLibrary_7fsho")
}
autoplay = "idle"
speed_scale = 0.875

[node name="Skin3Button" type="Button" parent="Buttons"]
offset_left = 832.0
offset_top = 179.0
offset_right = 994.0
offset_bottom = 376.0
theme = ExtResource("3_67pyf")

[node name="TextureRect" type="TextureRect" parent="Buttons/Skin3Button"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 0
offset_left = -19.0
offset_top = 3.0
offset_right = 161.0
offset_bottom = 200.0
texture = ExtResource("4_gj35x")

[node name="skin3" type="Sprite2D" parent="Buttons/Skin3Button/TextureRect"]
position = Vector2(92, 96)
scale = Vector2(6.91667, 6.91667)
texture = ExtResource("7_sbihw")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Skin3Button/TextureRect/skin3"]
active = false
libraries = {
&"": SubResource("AnimationLibrary_7fsho")
}
autoplay = "idle"
speed_scale = 0.875

[node name="UpgradesButton" type="Button" parent="Buttons"]
offset_left = 708.0
offset_top = 75.0
offset_right = 909.0
offset_bottom = 143.0
theme = ExtResource("3_2w1wo")
text = "Upgrades"

[node name="VoltarButton" type="Button" parent="Buttons"]
offset_left = 907.0
offset_top = 75.0
offset_right = 1087.0
offset_bottom = 143.0
theme = ExtResource("3_2w1wo")
text = "Voltar"

[node name="Labels" type="Node" parent="."]
script = ExtResource("3_bphmr")

[node name="PlayerLabel" type="Label" parent="Labels"]
offset_left = 170.0
offset_top = 95.0
offset_right = 258.0
offset_bottom = 159.0
label_settings = ExtResource("8_7yj5r")

[node name="Estrela" type="Sprite2D" parent="Labels/PlayerLabel"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
position = Vector2(-21, 5)
scale = Vector2(4, 4)
texture = ExtResource("10_gj35x")

[node name="PlayerLabel3" type="Label" parent="Labels"]
offset_left = 985.0
offset_top = 343.0
offset_right = 1073.0
offset_bottom = 407.0
text = "x30"
label_settings = ExtResource("8_7yj5r")

[node name="Estrela" type="Sprite2D" parent="Labels/PlayerLabel3"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
position = Vector2(-20, -11)
scale = Vector2(4, 4)
texture = ExtResource("10_gj35x")

[node name="PlayerLabel5" type="Label" parent="Labels"]
offset_left = 317.0
offset_top = 343.0
offset_right = 405.0
offset_bottom = 407.0
text = "x0"
label_settings = ExtResource("8_7yj5r")

[node name="Estrela" type="Sprite2D" parent="Labels/PlayerLabel5"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
position = Vector2(-20, -11)
scale = Vector2(4, 4)
texture = ExtResource("10_gj35x")

[node name="PlayerLabel4" type="Label" parent="Labels"]
offset_left = 646.0
offset_top = 343.0
offset_right = 734.0
offset_bottom = 407.0
text = "x15"
label_settings = ExtResource("8_7yj5r")

[node name="Estrela" type="Sprite2D" parent="Labels/PlayerLabel4"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
position = Vector2(-20, -11)
scale = Vector2(4, 4)
texture = ExtResource("10_gj35x")

[node name="TextureRect" type="TextureRect" parent="Labels"]
offset_left = 125.0
offset_top = 382.0
offset_right = 335.0
offset_bottom = 567.0
texture = ExtResource("8_a04mj")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Skin1Label" type="RichTextLabel" parent="Labels/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -56.5
offset_right = 78.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_doxrh")
theme_override_font_sizes/normal_font_size = 13
text = "Cavaleiro dos Circuitos - \"Busco o poder das portas\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Labels"]
offset_left = 463.0
offset_top = 382.0
offset_right = 673.0
offset_bottom = 567.0
texture = ExtResource("8_a04mj")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Skin2Label" type="RichTextLabel" parent="Labels/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -58.5
offset_right = 78.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_doxrh")
theme_override_font_sizes/normal_font_size = 13
text = "Cavaleiro do LED - \"Glória ao LED!\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="Labels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 218.0
offset_top = 58.0
offset_right = 428.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_a04mj")
expand_mode = 1

[node name="Skin3Label" type="RichTextLabel" parent="Labels/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -54.5
offset_right = 79.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_doxrh")
theme_override_font_sizes/normal_font_size = 13
text = "Mestre dos Circuitos - \"Masmorras na palma da mão\""
horizontal_alignment = 1
vertical_alignment = 1
